--- a/src/main/webapp/Statistics.xhtml
+++ b/src/main/webapp/Statistics.xhtml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Insert title here</title>
-</head>
-<body>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui" template="/template/template.xhtml">
 
-</body>
-</html>
+
+
+	<ui:define name="content">
+		<div class="stats">
+			
+<!-- 			<p:chart type="pie" ></p:chart> -->
+			
+		</div>
+	</ui:define>
+
+</ui:composition>
