--- a/src/main/webapp/error.xhtml
+++ b/src/main/webapp/error.xhtml
@@ -1,11 +1,70 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 <head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet"
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script
+	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/resources/js/navbar.js" />
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>Insert title here</title>
 </head>
 <body>
-ABORT ABORT ABORT
+
+	<div class="container">
+		<div class="col-md-12 col-lg-offset-2">
+			<div class="login-signup">
+				<div class="row">
+					<div class="col-md-8 nav-tab-holder"></div>
+				</div>
+
+				<div class="tab-content">
+					<div role="tabpanel" class="tab-pane active" id="home">
+						<div class="row">
+
+							<div class="col-md-8 mobile-pull">
+								<article role="login">
+								<h3 class="text-center">
+									<i class="fa fa-lock"></i>
+								</h3>
+
+								<h:form role="form" name="loginform"
+									method="post">
+									<fieldset>
+										<legend>Login</legend>
+
+										<label for="name">Merci de rentrer un identifiant et
+											mot de passe valables</label>
+										<div class="form-group"></div>
+
+
+
+										<div class="form-group">
+<!-- 										<h:commandButton value="Retour" action="login"></h:commandButton> -->
+											<input type="submit" name="login" value="Retour" 
+												class="btn btn-primary" />
+										</div>
+
+									</fieldset>
+								</h:form>
+								</article>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 </body>
 </html>
