--- a/src/main/webapp/listAccount.xhtml
+++ b/src/main/webapp/listAccount.xhtml
@@ -19,32 +19,27 @@
 
 				<p:column headerText="Numéro de compte"
 					sortBy="#{compte.accountNumber}">
-
 					<h:outputText value="#{compte.accountNumber}" />
 				</p:column>
 
 				<p:column headerText="Type de compte" sortBy="#{compte.accountType}">
-					<!-- the column header -->
-
-					<!--  the value for each row -->
 					<h:outputText value="#{compte.accountType}" />
 				</p:column>
 
 				<p:column headerText="Solde" sortBy="#{compte.balance}">
-					<!-- the column header -->
-
-					<!--  the value for each row -->
 					<h:outputText value="#{compte.balance}" />
 				</p:column>
 
 				<p:column headerText="Date de Création"
 					sortBy="#{compte.creationDate}">
-					<!-- the column header -->
-
-					<!--  the value for each row -->
 					<h:outputText value="#{compte.creationDate}" />
 				</p:column>
 
+<!-- 				<p:column headerText="Effacer" style="width:8%"> -->
+<!-- 					<h:commandLink id="a" value="" styleClass="fa fa-trash medium" -->
+<!-- 						onclick="if (!confirm('Vous êtes sûr de vouloir effacer ce client?')) return false" -->
+<!-- 						action="#{clientController.removeClient(tempClient)}" /> -->
+<!-- 				</p:column> -->
 			</p:dataTable>
 
 		</h:form>
