--- a/src/main/webapp/bankTransfer.xhtml
+++ b/src/main/webapp/bankTransfer.xhtml
@@ -10,158 +10,57 @@
 
 
 		<h:form id="formClient1">
-			<p:growl id="messages" showDetail="true" life="3000" />
-
-			<p:dataTable id="radioDT" var="tempClient"
-				selection="#{clientController.clientSender}"
-				value="#{clientController.clients}" styleClass="et_datatable"
-				rowKey="#{tempClient.id}" rows="1">
-
-
-				<f:facet name="header">
-				</f:facet>
-				<!-- colonnes affichage -->
-				<p:column selectionMode="single"
-					style="width:50px; text-align:center" />
-
-
-				<p:column headerText="Nom" sortBy="#{tempClient.lastName}"
-					filterBy="#{tempClient.lastName}" filterMatchMode="contains">
-					<h:outputText value="#{tempClient.lastName}" />
-				</p:column>
-
-
-				<p:column headerText="Prénom" sortBy="#{tempClient.firstName}">
-					<h:outputText value="#{tempClient.firstName}" />
-				</p:column>
-
-				<f:facet name="footer">
-					<f:facet name="footer">
-						<p:commandButton process="radioDT" update=":formClient1:display1"
-							value="Selection Emetter" />
-
-					</f:facet>
-
-				</f:facet>
-
-			</p:dataTable>
-			<h:panelGrid id="display1" columns="2" cellpadding="4"
-				style="margin:0 auto;">
-				<h:outputText value="#{clientController.clientSender.toString()}" />
-			</h:panelGrid>
-		</h:form>
-		
-		
-		<h:form id="formAccountClient1">
-			<p:growl id="messages" showDetail="true" life="3000" />
-
-			<p:dataTable id="radioDT" var="tempAccount"
-				selection="#{clientController.clientSender.bankAccounts}"
-				value="#{clientController.accountSender}" styleClass="et_datatable"
-				emptyMessage="client émetteur non sélectionné"
-				rowKey="#{tempAccount.accountNumber}" rows="2">
-
-
-				<f:facet name="header">
-				</f:facet>
-				<!-- colonnes affichage -->
-				<p:column selectionMode="single"
-					style="width:50px; text-align:center" />
-
-
-<!-- 				<p:column headerText="Nom" 	filterBy="#{tempAccount.accountType}" > -->
-<!-- 					<h:outputText value="#{tempClient.lastName}" /> -->
-<!-- 				</p:column> -->
-
-
-				<p:column headerText="Solde" >
-					<h:outputText value="#{tempAccount.balance}" />
-				</p:column>
-
-				<f:facet name="footer">
-					<f:facet name="footer">
-						<p:commandButton process="radioDT" update=":formAccountClient1:displayAccount1"
-							value="Selection Compte émetteur" />
-
-					</f:facet>
-
-				</f:facet>
-
-			</p:dataTable>
-			<h:panelGrid id="displayAccount1" columns="2" cellpadding="4"
-				style="margin:0 auto;">
-				<h:outputText value="#{clientController.accountSender.toString()}" />
-			</h:panelGrid>
-		</h:form>
-		
-		
-		
-
-		<h:form id="formClient2">
-			<p:dataTable id="radioDT" var="tempClientr"
-				selection="#{clientController.clientReciever}"
-				value="#{clientController.clients}" styleClass="et_datatable"
-				rowKey="#{tempClientr.id}" rows="1">
-
-
-				<f:facet name="header">
-				</f:facet>
-				<!-- colonnes affichage -->
-				<p:column selectionMode="single"
-					style="width:50px; text-align:center" />
-
-
-				<p:column headerText="Nom" sortBy="#{tempClientr.lastName}"
-					filterBy="#{tempClientr.lastName}" filterMatchMode="contains">>
-					<h:outputText value="#{tempClientr.lastName}" />
-				</p:column>
-
-
-				<p:column headerText="Prénom" sortBy="#{tempClientr.firstName}">
-					<h:outputText value="#{tempClientr.firstName}" />
-				</p:column>
-
-				<f:facet name="footer">
-					<f:facet name="footer">
-						<p:commandButton process="radioDT" update=":formClient2:display2"
-							value="Selection Emetter" />
-
-					</f:facet>
-
-				</f:facet>
-			</p:dataTable>
 
 
 
+			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
 
-			<h:panelGrid id="display2" columns="2" cellpadding="4"
-				style="margin:0 auto;">
-				<h:outputText value="#{clientController.clientReciever.toString()}" />
+				<p:outputLabel for="clientSender"
+					value="Choix du cient et du compte émetteur : *" />
+				<p:selectOneMenu id="clientSender"
+					value="#{accountController.numAccountSender}"
+					panelStyle="width:180px" effect="fade" style="width:250px"
+					filter="true" filterMatchMode="startsWith">
+					<f:selectItems value="#{accountController.bankAccounts}"
+						var="account" itemValue="#{account.accountNumber}"
+						itemLabel="#{account.client} + #{account}" />
+				</p:selectOneMenu>
+
+
+				<p:outputLabel for="clientReciever"
+					value="Choix du cient et du compte bénéficiaire : *" />
+				<p:selectOneMenu id="clientReciever"
+					value="#{accountController.numAccountReciever}"
+					panelStyle="width:180px" effect="fade" style="width:250px"
+					filter="true" filterMatchMode="startsWith">
+					<f:selectItems value="#{accountController.bankAccounts}"
+						var="account" itemValue="#{account.accountNumber}"
+						itemLabel="#{account.client} + #{account}" />
+				</p:selectOneMenu>
+
+				<p:outputLabel for="amount" value="Montant du virement : " />
+				<p:inputText id="amount" value="#{accountController.amount}"></p:inputText>
+				<p:commandButton action="#{accountController.transfer}" />
+
+
+
+				<!-- 				<p:outputLabel for="clientSender" value="Choix du compte émetteur : *" /> -->
+				<!-- 				<p:selectOneMenu id="clientSender" -->
+				<!-- 					value="#{accountController.numAccountSender}" panelStyle="width:180px" -->
+				<!-- 					effect="fade" style="width:250px" filter="true" -->
+				<!-- 					filterMatchMode="startsWith"> -->
+				<!-- 					<f:selectItems value="#{accountController.bankAccountsSender}" var="account" -->
+				<!-- 						itemLabel="#{account.client.toString()} + ' ' + #{account.toString()}" itemValue="#{account}" /> -->
+				<!-- 				</p:selectOneMenu> -->
+				<!-- 				<p:commandButton update=":form1:display" oncomplete="PF('Dlg').show()" -->
+				<!-- 					image="ui-icon ui-icon-close" title="Submit"> -->
+				<!-- 					<f:setPropertyActionListener value="#{clientController.clientSender}" -->
+				<!-- 						target="#{client}" /> -->
+
+				<!-- 				</p:commandButton>> -->
+
 			</h:panelGrid>
 
-
-			<!-- 			<p:dialog header="Mise à jour informations client" -->
-			<!-- 				widgetVar="senderDlg" resizable="false" width="750" height="400" -->
-			<!-- 				showEffect="clip" hideEffect="clip" modal="true"> -->
-
-			<!-- 				<h:panelGrid id="display" columns="2" cellpadding="4" -->
-			<!-- 					style="margin:0 auto;"> -->
-			<!-- 					<h:outputText value="Nom" for="lastName" -->
-			<!-- 						style="padding-left: 30px; padding-right: 30px;" /> -->
-			<!-- 					<p:inputText id="lastName" -->
-			<!-- 						value="#{clientController.selectedClient.lastName}" -->
-			<!-- 						placeholder="#{clientController.selectedClient.lastName}" -->
-			<!-- 						label="lastName" /> -->
-
-			<!-- 					<h:outputText value="Prénom" for="firstName" -->
-			<!-- 						style="padding-left: 30px; padding-right: 30px;" /> -->
-			<!-- 					<p:inputText id="firstName" -->
-			<!-- 						value="#{clientController.selectedClient.firstName}" -->
-			<!-- 						label="firstName" -->
-			<!-- 						placeholder="#{clientController.selectedClient.firstName}" /> -->
-
-			<!-- 				</h:panelGrid> -->
-			<!-- 			</p:dialog> -->
 
 		</h:form>
 
