--- a/src/main/webapp/bankTransfer.xhtml
+++ b/src/main/webapp/bankTransfer.xhtml
@@ -13,34 +13,39 @@
 
 
 
-			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5" >
 
 				<p:outputLabel for="clientSender"
 					value="Choix du cient et du compte émetteur : *" />
-				<p:selectOneMenu id="clientSender"
+				<p:selectOneMenu id="clientSender" required="true"
 					value="#{accountController.numAccountSender}"
 					panelStyle="width:180px" effect="fade" style="width:250px"
-					filter="true" filterMatchMode="startsWith">
+					filter="true" filterMatchMode="startsWith" >
+					<f:selectItem itemLabel="--Rechercher le client émetteur et le compte associé--" itemValue="" />
 					<f:selectItems value="#{accountController.bankAccounts}"
 						var="account" itemValue="#{account.accountNumber}"
-						itemLabel="#{account.client} + #{account}" />
+						itemLabel="#{account.client} / #{account}" />
 				</p:selectOneMenu>
 
 
 				<p:outputLabel for="clientReciever"
 					value="Choix du cient et du compte bénéficiaire : *" />
 				<p:selectOneMenu id="clientReciever"
-					value="#{accountController.numAccountReciever}"
+					value="#{accountController.numAccountReciever}" required="true"
 					panelStyle="width:180px" effect="fade" style="width:250px"
 					filter="true" filterMatchMode="startsWith">
+					<f:selectItem itemLabel="--Rechercher le client bénéficiaire et le compte associé--" itemValue="" />
 					<f:selectItems value="#{accountController.bankAccounts}"
 						var="account" itemValue="#{account.accountNumber}"
-						itemLabel="#{account.client} + #{account}" />
+						itemLabel="#{account.client} / #{account}'" />
 				</p:selectOneMenu>
 
 				<p:outputLabel for="amount" value="Montant du virement : " />
-				<p:inputText id="amount" value="#{accountController.amount}"></p:inputText>
-				<p:commandButton action="#{accountController.transfer}" />
+				<p:inputText id="amount" value="#{accountController.amount}" converterMessage="Test" >
+				<f:validateDoubleRange  minimum="0"/>
+				</p:inputText>
+				<p:commandButton id="validateTranfer" value="Valider le virement" 
+					action="#{accountController.transfer}"  />
 
 
 
